# liddar

./: .gitignore  README.md  pyproject.toml  utils.py
notebooks/: 2024-madness.ipynb
src/data/: initialize_datasets.py
src/features/: build_features.py  create_training_data.sql  sdv_to_kaggle_query.sql  swap_boxscores.sql
src/models/: get_team_features.sql  predict_model.py  train_model.py
